<resources>
    <string name="app_name">f</string>
    <string name="quote_name">- Jim Rohn</string>
    <string name="quotes">If you don’t like to read, you haven’t found the right book.</string>
    <string name="signin"><u>Sign In</u></string>
    <string name="signup"><u>Sign Up</u></string>
    <string name="book_title">title</string>
    <string name="book_author">author</string>
    <string name="book_rate">0</string>
    <string name="book_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</string>
    <string name="book_price">Rp 0</string>
    <string name="welcome_text">Hello user</string>
    <string name="popular_text">Romance</string>
    <string name="for_you_text">Just for you</string>
    <string name="view_all_text">View all</string>
    <string name="user_name">User</string>
    <string name="user_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</string>
    <string name="profile_edit">Manage your profile</string>
    <string name="user_profile">My Profile</string>
    <string name="faqs_profile">FAQs</string>
    <string name="rating_count">0</string>
    <string name="book_published">published_date</string>
    <string name="average_rating">0</string>
    <string name="book_page">0 pages</string>
    <string name="add_bookmark">Add to favorite</string>
    <string name="book_webview">WebView</string>
    <string name="search_icon">Looking for something?</string>
<!--    <string-array name="group_title">-->
<!--        <item>Where there is love, there is life</item>-->
<!--        <item>The journey, is the destination</item>-->
<!--        <item>The best things in life are free</item>-->
<!--    </string-array>-->
</resources>