<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.HomeFragment"
    android:background="@color/grey"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/welcome_text"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:fontFamily="@font/epilogue_semibold_600"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="end"
                android:src="@drawable/ic_user_photo"
                app:civ_border_color="@color/white"
                app:civ_border_width="3dp" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/popular_text"
            android:textSize="17sp"
            android:fontFamily="@font/epilogue_semibold_600"
            android:textColor="@color/white"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="wrap_content"
            android:layout_height="180dp"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            tools:listitem="@layout/popular_recycler"
            tools:itemCount="5"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/for_you_text"
                android:layout_weight="1"
                android:textSize="17sp"
                android:fontFamily="@font/epilogue_semibold_600"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_all_text"
                android:fontFamily="@font/epilogue_regular_400"
                android:textColor="@color/white"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            tools:listitem="@layout/vertical_recycler"
            tools:itemCount="3"/>

    </LinearLayout>

</ScrollView>
