<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:cardCornerRadius="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <ImageView
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:src="@drawable/ic_book_icon"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/book_title"
                    android:textSize="15sp"
                    android:fontFamily="@font/epilogue_semibold_600"
                    android:textColor="@color/grey"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/book_author"
                    android:textSize="15sp"
                    android:fontFamily="@font/epilogue_regular_400"/>

                <RatingBar
                    android:layout_marginTop="5dp"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:numStars="5"
                    android:stepSize="1"
                    android:progressTint="@color/grey"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/book_price"
                android:textColor="@color/grey"
                android:fontFamily="@font/epilogue_semibold_600"
                android:textAlignment="textEnd"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>