<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="10dp"
    android:id="@+id/rv_body">

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="180dp"
        app:cardCornerRadius="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="15dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:src="@drawable/ic_book_icon"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginStart="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/book_title"
                    android:fontFamily="@font/epilogue_semibold_600"
                    android:textColor="@color/grey"
                    android:textSize="15sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/book_author"
                    android:textSize="12sp"
                    android:fontFamily="@font/epilogue_regular_400"/>

                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    style="?android:attr/ratingBarStyleSmall"
                    android:numStars="5"
                    android:stepSize="1"
                    android:progressTint="@color/grey"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/book_price"
                    android:fontFamily="@font/epilogue_semibold_600"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:layout_gravity="bottom"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>